[package]
name = "gyroflow-bench"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Benchmark harness for the Gyroflow stabilization hot path"

[[bin]]
name = "gyroflow-bench"
path = "src/main.rs"

[dependencies]
gyroflow-plugin-base = { path = "../common" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
parking_lot = "0.12"
